Fix overflow of pagination

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3762,9 +3762,10 @@ input[type="button"].btn-block {
   display: flex;
   padding-left: 0;
   list-style: none;
-  border-radius: 0.25rem; 
+  border-radius: 0.25rem;
   font-size: 14px;
   font-weight: 600;
+  flex-wrap: wrap;
 }
 
 .page-link {
